# uefidoom

./: .gitignore  CMakeLists.txt  readme.md  run.bash  run_keyboard.bash  run_mouse.bash  run_pit.bash  run_timer.bash
dlibc/: dlibc.h  printf.c  printf.h  scanf.c  utils.c
doom_sdl/: main.c
doomgeneric/: am_map.c  am_map.h  d_event.c  d_event.h  d_items.c  d_items.h  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_main.c  d_main.h  d_mode.c  d_mode.h  d_net.c  d_player.h  d_think.h  doomdef.c  doomdef.h  doomgeneric.c  doomgeneric.h  doomgeneric_embedded_sdl.c  doomgeneric_emscripten.c  doomgeneric_sdl.c  doomgeneric_soso.c  doomgeneric_sosox.c  doomgeneric_win.c  doomgeneric_xlib.c  doomstat.c  doomstat.h  doomtype.h  dstrings.c  embedded.c  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  hu_lib.c  (+95 more)
doomgeneric/hostlibc/: embedded.c  host.c
efidoom/: doom.c  efi_utils.c  efi_utils.h  keyboard.c  mouse.c  pit_test.c  test.c  tick.c  x86.c  x86.h
efidoom/efi/inc/ia32/: efibind.h
tests/: aspect_ratio.cpp  host.c  printf_tests.cpp  scanf_tests.cpp
